# Nightstream

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GPU_ACCELERATION_PLAN.md  GPU_CODE_REVIEW.md  PLANNING_REQ_CONTEXT.md  README.md  TODO.md  file_aggregator.sh  rust-toolchain.toml  show_diff.sh
crates/deprecated-neo-memory/: Cargo.toml  README.md
crates/deprecated-neo-memory/src/: ajtai.rs  builder.rs  mle.rs  plain.rs  public_digest.rs  shout.rs  ts_common.rs
crates/deprecated-neo-memory/tests/: builder_chunking.rs  cpu_bus_multi_instance_injection.rs  cpu_constraints_tests.rs  elf_loader_tests.rs  identity_mle_correctness.rs  identity_shout_oracle_sparse_vs_dense.rs  me_y_scalars_semantics.rs  mle_tests.rs  output_check_tests.rs  product_round_oracle.rs  r1cs_cpu_shared_bus_no_footguns.rs  riscv_ccs_tests.rs  riscv_decode_lookup_delta_consistency.rs  riscv_decode_rv32.rs  riscv_exec_table.rs  riscv_instruction_scaffold.rs  riscv_legacy_ac_validation.rs  riscv_lookup_rv32m_semantics.rs  riscv_opcode_mle_tests.rs  riscv_packed_rollout_layout.rs  riscv_poseidon2_feature_gate.rs  riscv_poseidon2_precompile.rs  riscv_rv32m_decomposition_integrity.rs  riscv_rv32m_masked_columns.rs  riscv_rv64_shout_event_table.rs  riscv_shout_event_table.rs  riscv_shout_event_table_sparse_matrix.rs  riscv_signed_div_rem_shared_bus_constraints.rs  riscv_single_instruction_constraints.rs  riscv_trace_air.rs  riscv_trace_shared_bus_w1.rs  riscv_trace_sidecar_extract.rs  riscv_trace_virtual_invariants_ccs.rs  riscv_trace_wiring_ccs.rs  rv32_trace_all_ccs_counts.rs  rv64_foundation.rs  rv64_virtual_decomposition.rs  rv64im_validation.rs  shout_byte_decomp_semantics.rs  sparse_matrix_mle_correctness.rs  (+6 more)
crates/neo-abba/: Cargo.toml
crates/neo-abba/benches/: commit_bench.rs
crates/neo-abba/src/: commit.rs  decomp.rs  error.rs  lib.rs  s_module.rs  types.rs
crates/neo-abba/tests/: commit_test.rs  paper_claims.rs  phi128_babybear.rs  phi128_test.rs
crates/neo-ccs/: Cargo.toml  README.md
crates/neo-ccs/spec-tests/: crypto.rs  gadgets.rs  lean_oracles.rs  matrix.rs  polynomial.rs  relations.rs
crates/neo-ccs/specs/: Crypto.spec.md  Gadgets.spec.md  Matrix.spec.md  Polynomial.spec.md  Relations.spec.md
crates/neo-ccs/src/: lib.rs  poly.rs  relations.rs  sparse.rs  traits.rs  utils.rs
crates/neo-ccs/tests/: check_me_consistency_padded_y.rs  check_me_consistency_superneo_packed.rs  red_team_me.rs  simple_mcs_opening_test.rs  superneo_matrix_transform.rs
crates/neo-fold-next/: Cargo.toml  README.md
crates/neo-fold-next/specs/: chip8-kernel.md  chip8-recursive-instantiation.md  chip8-rust-file-structure-plan.md  chip8-rust-lean-boundary.md  neo-fold-next-rust-structure-plan.md  riscv-authoritative-side-proof-bundle.md  riscv-kernel.md  riscv-main-relation.md  riscv-recursive-instantiation.md  riscv-recursive-proof.md  riscv-witness-backed-side-bridge.md  rv64im-columnar-opening-plan.md  rv64im-parity.md  rwasm-implementation-plan.md  rwasm-implementation-strategy.md  wasm-implementation-plan.md  wasm-implementation-strategy.md
crates/neo-fold-next/src/: chunk_relation.rs  finalize.rs  lib.rs  opening.rs  proof.rs  prover.rs  run.rs  step_build.rs  time_opening.rs  verifier.rs  witness_layout.rs
crates/neo-fold-next/tests/: chip8_audit_bundle.rs  chip8_bridge_chunk_native.rs  chip8_chunk_relation.rs  chip8_kernel.rs  chip8_kernel_export.rs  chip8_nightstream.rs  chip8_pipeline.rs  chip8_recursive_export.rs  chip8_spartan2_decider.rs  f_prime_conformance_suite.rs  fibonacci_abba.rs  fibonacci_ccs.rs  finalized_proof.rs  main_soundness_suite.rs  nightstream.rs  perf.rs  prover_pipeline.rs  rv64im_accumulate.rs  rv64im_accumulator_public_statement.rs  rv64im_canonical_openings.rs  rv64im_chunk_fold_step.rs  rv64im_chunk_step_ivc.rs  rv64im_chunk_step_ivc_spartan.rs  rv64im_chunk_step_recursive.rs  rv64im_chunk_step_relation.rs  rv64im_claim_reduction.rs  rv64im_decider_relation.rs  rv64im_direct_side_relation.rs  rv64im_eval_claim_helpers.rs  rv64im_eval_claim_witnesses.rs  rv64im_eval_claims.rs  rv64im_fibonacci_output_proof.rs  rv64im_final_opening.rs  rv64im_final_relation.rs  rv64im_kernel_export_relation.rs  rv64im_kernel_export_witness.rs  rv64im_main_proof_side_lane.rs  rv64im_main_proof_surface.rs  rv64im_main_recursion_proof.rs  rv64im_main_recursion_side_lane.rs  (+72 more)
crates/neo-gpu/: Cargo.toml
crates/neo-gpu/src/: abi.rs  config.rs  error.rs  lib.rs  loader.rs
crates/neo-gpu/tests/: config_policy.rs  loader.rs  poseidon_constants.rs  primitive_perf.rs  ring_superneo.rs
crates/neo-math/: Cargo.toml
crates/neo-math/spec-tests/: bar_transform.rs  goldilocks.rs  lean_oracles.rs  norms.rs  ring.rs  s_action.rs
crates/neo-math/specs/: BarTransform.spec.md  Goldilocks.spec.md  Norms.spec.md  Ring.spec.md  SAction.spec.md
crates/neo-math/src/: balanced.rs  lib.rs  quaternion.rs  ring.rs  s_action.rs
crates/neo-math/tests/: ring_invariants.rs  ring_isomorphism.rs  rq_mul_karatsuba.rs  s_action_production_tests.rs  superneo_transform.rs  test_helpers.rs
crates/neo-midnight-bridge-artifacts/: Cargo.toml
crates/neo-midnight-bridge-artifacts/src/: lib.rs  main.rs  nmbp.rs  nmbws.rs  relation.rs
crates/neo-midnight-bridge-artifacts/tests/: nmbp_roundtrip.rs
crates/neo-midnight-bridge-ffi/: Cargo.toml
crates/neo-midnight-bridge-ffi/src/: lib.rs
crates/neo-midnight-mojo-bridge/: Cargo.toml  build.rs
crates/neo-midnight-mojo-bridge/mojo/: fft_cuda_compare.mojo  fft_lagrange_to_coeff.mojo  keyinfo.mojo  kzg_commit_lagrange.mojo  kzg_gwc_roundtrip.mojo  msm_cuda_compare.mojo  plonk_prove_from_snapshot.mojo  plonk_prove_goldilocks_mul.mojo  plonk_prove_many_from_snapshot.mojo  plonk_prove_sumcheck_single_round.mojo
crates/neo-midnight-mojo-bridge/src/: lib.rs  prover.rs
crates/neo-midnight-mojo-bridge/tests/: fft_cuda_compare.rs  fft_lagrange_to_coeff.rs  goldilocks_mul_layout_probe.rs  inspect_roundtrip.rs  keyinfo_roundtrip.rs  kzg_commit_lagrange.rs  (+20 more)
crates/neo-transcript/: Cargo.toml
crates/nstream-midnight-bridge/: Cargo.toml
crates/spartan2/: Cargo.toml
(+2358 files in other folders)
