[package]
name = "deprecated-neo-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
description = "Deprecated memory and lookup arguments (Twist/Shout) for Neo"

[features]
default = []
debug-logs = ["neo-reductions/debug-logs"]
poseidon-precompile = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
neo-math = { path = "../neo-math" }
neo-ajtai = { path = "../neo-ajtai" }
neo-ccs = { path = "../neo-ccs" }
neo-params = { path = "../neo-params" }
deprecated-neo-vm-trace = { path = "../deprecated-neo-vm-trace" }
neo-transcript = { path = "../neo-transcript" }
neo-reductions = { path = "../neo-reductions" }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-goldilocks = { workspace = true }
p3-symmetric = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }

[lints]
workspace = true
