[package]
name = "neo-ccs"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_chacha_p3 = { workspace = true }
once_cell = { workspace = true }

# For structured logging (gated behind neo-logs feature)  
tracing = { version = "0.1", default-features = false, features = ["std"] }
spartan2 = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }

[features]
default = []
# Enable verbose logging for debugging (OFF by default for security - CWE-532) 
neo-logs = []
spartan2-compat = ["spartan2", "neo-math/spartan2-compat"]
wasm-threads = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
neo-ajtai = { path = "../neo-ajtai" }
serde_json = { workspace = true }

# Spec-derived tests (lean oracles + invariant obligations)
[[test]]
name = "spec_lean_oracles"
path = "spec-tests/lean_oracles.rs"

[[test]]
name = "spec_relations"
path = "spec-tests/relations.rs"

[[test]]
name = "spec_matrix"
path = "spec-tests/matrix.rs"

[[test]]
name = "spec_polynomial"
path = "spec-tests/polynomial.rs"

[[test]]
name = "spec_crypto"
path = "spec-tests/crypto.rs"

[[test]]
name = "spec_gadgets"
path = "spec-tests/gadgets.rs"
