[package]
name = "neo-fold-next"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[features]
default = []
chip8-audit = []

[dependencies]
neo-ajtai = { path = "../neo-ajtai" }
neo-ccs = { path = "../neo-ccs" }
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
neo-reductions = { path = "../neo-reductions" }
neo-transcript = { path = "../neo-transcript" }
p3-field = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
object = "0.37"
rand_chacha = { workspace = true }
serde_json = { workspace = true }
