[package]
name = "neo-fold-next"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[features]
default = []
chip8-audit = []

[dependencies]
neo-ajtai = { path = "../neo-ajtai" }
neo-ccs = { path = "../neo-ccs" }
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
neo-reductions = { path = "../neo-reductions" }
neo-transcript = { path = "../neo-transcript" }
bincode = { workspace = true }
bellpepper-core = { workspace = true }
futures = "0.3"
p3-field = { workspace = true }
rayon = { workspace = true }
rwasm = { git = "https://github.com/ecioppettini/rwasm", branch = "nightstream-wip", default-features = false, features = ["tracing"] }
serde = { workspace = true }
spartan2 = { workspace = true }
thiserror = { workspace = true }
wasmparser = "0.240"
wasmtime = { version = "43.0.0", features = ["debug", "cranelift"] }

[dev-dependencies]
object = "0.37"
rand_chacha = { workspace = true }
wat = "1"
