[package]
name = "neo-fold-next"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[features]
default = []
chip8-audit = []

[dependencies]
neo-ajtai = { path = "../neo-ajtai" }
neo-ccs = { path = "../neo-ccs" }
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
neo-reductions = { path = "../neo-reductions" }
neo-transcript = { path = "../neo-transcript" }
bincode = { workspace = true }
bellpepper-core = { workspace = true }
ff = { workspace = true }
once_cell = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
rayon = { workspace = true }
rand_chacha_p3 = { workspace = true }
serde = { workspace = true }
spartan2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
object = "0.37"
rand_chacha = { workspace = true }
serde_json = { workspace = true }
