[package]
name = "neo-math"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"
description = "Nightstream math primitives: Fq, F_{q^2}, cyclotomic ring R_q, S-action"

[lints]
workspace = true

[dependencies]
# Plonky3 field + Goldilocks + Matrix (no NTT/FFT in folding layer per Neo design)
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-matrix = { workspace = true }

# Core  
thiserror = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
# Dev and property testing
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
spartan2-compat = []

# Spec-derived tests (lean oracles + invariant obligations)
[[test]]
name = "spec_lean_oracles"
path = "spec-tests/lean_oracles.rs"

[[test]]
name = "spec_ring"
path = "spec-tests/ring.rs"

[[test]]
name = "spec_goldilocks"
path = "spec-tests/goldilocks.rs"

[[test]]
name = "spec_norms"
path = "spec-tests/norms.rs"

[[test]]
name = "spec_bar_transform"
path = "spec-tests/bar_transform.rs"

[[test]]
name = "spec_s_action"
path = "spec-tests/s_action.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
