[package]
name = "neo-transcript"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lints]
workspace = true

[features]
default = ["std"]
std = []
debug-log = []
fs-guard = ["debug-log"]

[dependencies]
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-symmetric = { workspace = true }
neo-math = { path = "../neo-math" }
neo-ccs = { path = "../neo-ccs" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
rand_chacha = { workspace = true }

# Spec-derived tests (invariant obligations from Transcript.spec.md)
[[test]]
name = "spec_transcript"
path = "spec-tests/transcript.rs"

[[test]]
name = "spec_rng"
path = "spec-tests/rng.rs"
