[package]
name = "nstream-midnight-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Midnight outer-compression bridge for theorem-facing neo-fold-next proof exports."

[dependencies]
base-crypto = { package = "midnight-base-crypto", git = "https://github.com/midnightntwrk/midnight-ledger", rev = "81a578c35b015c069cb22684e8b481300af6c6af" }
bincode.workspace = true
coin-structure = { package = "midnight-coin-structure", git = "https://github.com/midnightntwrk/midnight-ledger", rev = "81a578c35b015c069cb22684e8b481300af6c6af" }
neo-fold-next = { path = "../neo-fold-next" }
serialize = { package = "midnight-serialize", git = "https://github.com/midnightntwrk/midnight-ledger", rev = "81a578c35b015c069cb22684e8b481300af6c6af" }
storage = { package = "midnight-storage", git = "https://github.com/midnightntwrk/midnight-ledger", rev = "81a578c35b015c069cb22684e8b481300af6c6af" }
thiserror.workspace = true
transient-crypto = { package = "midnight-transient-crypto", git = "https://github.com/midnightntwrk/midnight-ledger", rev = "81a578c35b015c069cb22684e8b481300af6c6af" }
zkir = { package = "midnight-zkir", git = "https://github.com/midnightntwrk/midnight-ledger", rev = "81a578c35b015c069cb22684e8b481300af6c6af" }

[lints]
workspace = true
