[package]
name = "spartan2"
version = "0.4.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2024"
description = "High-speed zkSNARKs without trusted setup"
documentation = "https://docs.rs/spartan2"
readme = "README.md"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
bellpepper-core = "0.4.0"
bellpepper = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
digest = "0.10"
sha3 = "0.10"
rayon = "1.10.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
itertools = "0.14.0"
subtle = "2.5"
generic-array = "0.14"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
bitvec = "1.0"
byteorder = "1.4.3"
thiserror = "2.0.12"
halo2curves = { version = "0.9.0", features = ["derive_serde", "std"] }
group = "0.13.0"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
neo-params = { path = "../neo-params" }

# Plonky3 / p3 field + Poseidon2 for Goldilocks
p3-field       = { version = "=0.5.1", optional = true }
p3-goldilocks = { version = "=0.5.1", optional = true }
p3-poseidon2   = { version = "=0.5.1", optional = true }
p3-symmetric   = { version = "=0.5.1", optional = true }
rand = { version = "0.9", optional = true }
rand_chacha = "0.9"
rand_chacha_p3 = { package = "rand_chacha", version = "0.10.0" }

[target.wasm32-unknown-unknown.dependencies]
# see https://github.com/rust-random/rand/pull/948
getrandom = { version = "0.2.0", default-features = false, features = ["js"] }
js-sys = "0.3"

[dev-dependencies]
rand = "0.9"
hex = "0.4.3"
cfg-if = "1.0.0"
sha2 = "0.10.7"
proptest = "1.2.0"

[features]
default = ["p3_backend"]
p3_backend = ["p3-field", "p3-goldilocks", "p3-poseidon2", "p3-symmetric", "rand"]
wasm-threads = []

[target.'cfg(target_arch = "x86_64")'.dependencies]
halo2curves = { version = "0.9.0", features = ["derive_serde", "std", "asm"] }
