[package]
name = "superneo-rust-vectors"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bellpepper = "0.4.1"
bellpepper-core = "0.4"
ff = { version = "0.13", features = ["derive"] }
neo-ajtai = { path = "../../../crates/neo-ajtai" }
neo-ccs = { path = "../../../crates/neo-ccs" }
neo-fold = { path = "../../../crates/neo-fold" }
neo-math = { path = "../../../crates/neo-math" }
neo-memory = { path = "../../../crates/neo-memory" }
neo-params = { path = "../../../crates/neo-params" }
neo-reductions = { path = "../../../crates/neo-reductions" }
neo-transcript = { path = "../../../crates/neo-transcript" }
p3-field = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_chacha = "0.9"
sha2 = "0.10"
